# zip2addr

./: DESIGN_DOC.md  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
pkg/: package.spec.in
src/zip2addr/: cli.py  constants.py  crud.py  datagen.py  datasrc.py  db.py  iapi.py  main.py  models.py  routers.py  schema.py  schemas.py  utils.py
src/zip2addr/routers/: ping.py  zipcode.py
tests/: requirements.txt  requirements_type-check.txt
tests/data/: KEN_ALL.CSV  KEN_ALL_ROME.csv  README.rst  zipcodes.db  zipcodes.json
tests/units/: conftest.py  test_datagen.py  test_datasrc.py  test_iapi.py
tests/units/routers/: conftest.py  test_ping.py  test_zipcode.py
