# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = zip2addr
description = A simple web application to convert zip code to address
project_urls =
    CI: Github Actions = https://github.com/ssato/zip2addr/actions
    Bug Tracker = https://github.com/ssato/zip2addr/issues
    Source = https://github.com/ssato/zip2addr
long_description =
    zip2addr is a simple web application to convert zip code to address, as a
    study of Fast-API and related software.

    - Home: https://github.com/ssato/zip2addr
    - Author: Satoru SATOH <satoru.satoh@gmail.com>
    - License: MIT

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/zip2addr
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Environment :: Console
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]
include_package_data = True
packages = find:
package_dir =
        = src

# minimum dependencies.
install_requires =
    setuptools
    click

[options.data_files]
# share/man/man1 =
#    docs/zip2addr.1

[options.package_data]
zip2addr = py.typed

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    zip2addr = zip2addr.cli:main

[flake8]
max-complexity = 10
select = C,E,F,W,B

# .. seealso:: https://www.flake8rules.com/rules/W504.html
ignore = W503

[tool:pytest]
testpaths =
    tests

python_files =
    test_*.py
    Test*.py

addopts = --cov=src -vv --cov --cov-report xml
